2001-07-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* various bugs fixed in squarified treemaps:
	  correct end of recursion
	  using floats rather than ints to prevent miscalc.
	  should work now????
	* new hierarchical shadings

	
2001-07-10 Alexander Rawass <alexannika@users.sourceforge.net>

	* implemented squarified treemaps (experimental, buggy)
	* new file added: qtreemaparea_squarify.cpp
	* Bug: when zooming in too much, the paintarea takes up too much
	  memory -> X swaps till death

2001-07-05 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* more options and exp. shadings
	* experimental dynamic shading (not working)
	* user can watch treemap build up
	* paintEntry moved to qtreemaparea_paint.cpp
	* drawTreeMap,drawDuTree,CTM moved to qtreemaparea_recursion.cpp
	* renamed some of the shadings and
	* wrote some Documentation how to use Shadings and Options

	
2001-07-03 Alexander Rawass <alexannika@users.sourceforge.net>

	* QTreeMapWindow is now an abstract class
	* KDirTreeMapWindow implements makeTreeMapWidget()
	* experimental hierach. cushion
	* new menu options (experimental & debugging)
	* new way to make a border (border_step)
	* CTM (Cushion Treemap) test routine added (not working yet)
	* new Bug: I'm getting warnings about wrong RGB parameters,
		even in flat mode
	

2001-07-01 Alexander Rawass <alexannika@users.sourceforge.net>

        * QTreeMapArea is now a general abstract class to display hierarchies of any kind (not connected to KDirStat anymore) 
        * KDirTreeMapArea is the implementation for KDirStat 
        * new Bug: signals/slot not working correctly 
        * Bug fixed: crashed when telling kdirstat to display a directory which does not exist 
	

2001-06-29  Stefan Hundhammer  <sh@suse.de>

	* Moved CVS to SourceForge

2001-06-24  Alexander Rawass <alexannika@users.sourceforge.net>

	* V1.7.6-Devel
        * Removed Zoom Bug
        * Removed DM_FILES Bug